Login and Register OK

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,30 @@
 {
-    "cSpell.words": [
-        "BOTAO",
-        "CLICADO"
-    ]
+  "cSpell.words": [
+    "Aluno",
+    "alunos",
+    "Atualizada",
+    "Atualizar",
+    "BOTAO",
+    "caractetes",
+    "CLICADO",
+    "conta",
+    "Conta",
+    "Criar",
+    "Crie",
+    "desconhecido",
+    "deve",
+    "Editar",
+    "Erro",
+    "Fotos",
+    "Globalstyles",
+    "invalido",
+    "lenght",
+    "minha",
+    "Renderizando",
+    "reposnse",
+    "senha",
+    "Senha",
+    "toastify",
+    "Usuario"
+  ]
 }
